# open_geo_spy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: BENCHMARK_SUITES.md  SEARCH_QUALITY_IMPROVEMENTS.md
fe/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
fe/public/: index.html  manifest.json
fe/src/: App.css  App.tsx  api.ts  types.ts
scripts/: gepa_eval_command.py  run_gepa_stage.sh
scripts/gepa_configs/: expansion.yaml  feature_extraction.yaml  ocr.yaml  reasoning.yaml
src/: cli.py  config.py  main.py  test_api.py
src/agents/: candidate_verification_agent.py  feature_agent.py  graph.py  ml_ensemble_agent.py  nodes.py  orchestrator.py  reasoning_agent.py  state.py  web_intel_agent.py
src/api/: app.py  schemas.py
src/batch/: __init__.py  export.py  manager.py
src/browser/: browser_pool.py  search.py  stealth.py
src/cache/: __init__.py  decorators.py  store.py
src/calibration/: __init__.py  benchmark.py  calibrator.py
src/chat/: __init__.py  handler.py  intent.py  session.py
src/config/: llm.py  llm_presets.json  settings.py
src/eval/: __init__.py  dataset.py  evolution.py  judge.py  metrics.py  report.py  runner.py  tuner.py
src/evidence/: chain.py  verifier.py
src/extraction/: features.py  metadata.py  ocr.py
src/geo/: brave_client.py  confidence.py  country_codes.py  country_matcher.py  geocoding.py  mapillary_client.py  osm_client.py  provider_base.py  reranker.py  searxng_client.py  (+1 more)
tests/: conftest.py  test_api.py  test_cache_store.py  test_chat_handler.py  test_country_matcher.py  test_evidence_chain.py  test_geo_imports.py  test_geo_math.py  test_hint_extended.py  test_hint_handling.py  test_improve_controller.py  test_improve_ranking.py  test_improve_suite.py  test_improve_trace_analysis.py  test_model_registry.py  test_nodes.py  test_orchestrator.py  test_search_graph.py
(+84 files in other folders)
